corrected z-index on cards

--- a/src/App.css
+++ b/src/App.css
@@ -238,6 +238,7 @@ body {
   flex-direction: row;
   justify-content: center;
   padding: 2em;
+  z-index: 2;
   min-width: 300px;
   max-width: 600px;
   text-align: left;
